[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[dependencies]
z3 = { version = "0.12.1", features = ["static-link-z3"] }
mimalloc = { version = "*", default-features = false }
